--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -38,7 +38,7 @@
 	<p>Or go <a href="/">home</a>.</p>
 
 	<div class="text-center">
-		<p>A demo by <a href="http://scotch.io">Scotch</a>.</p>
+		<p>Adapted from a demo by <a href="http://scotch.io">Scotch</a>.</p>
 		<p>Visit the <a href="http://scotch.io/tutorials/javascript/easy-node-authentication-setup-and-local">tutorial</a>.</p>
 	</div>
 
